# advent-of-code

./: .gitignore  Cargo.toml  create_year.sh  shell.nix  test
.devcontainer/: devcontainer.json  setup.sh
src/: aoc.rs  days.rs  main.rs  years.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day3.rs  day4.rs  day5.rs  day6.rs  day8.rs  day9.rs
src/years/: base.rs  macros.rs
src/years/y2015/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day25.rs
src/years/y2021/: day01.rs  day25.rs
src/years/y2022/: day03.rs  day07.rs  day08.rs  day11.rs  day12.rs  day13.rs  day15.rs  day16.rs  day17.rs  day19.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/years/y2023/: day02.rs  day04.rs  day05.rs  day09.rs  day13.rs  day15.rs  day16.rs  day18.rs  day19.rs  day21.rs  day24.rs  day24b.py  day25.rs
src/years/y2024/: day01.rs  day02.rs  day03.rs  day07.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/years/y2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs
