[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.13"
tokio = { version = "1.22.0", features = ["full"] }
regex = "1"
chrono = "0.4.39"
scan_fmt = "0.2.6"
petgraph = "0.6.4"
rand = "0.8.5"
itertools = "0.13.0"
paste = "1.0.15"
memoize = "0.4.2"
dialoguer = "0.11.0"
colored = "2.2.0"
open = "5.3.1"
md5 = "0.7.0"
good_lp = "1.14.2"
